Redo as EnvironmentConfig, with variables sub-interface.

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -1,8 +1,8 @@
 ---
-Name: deploynaut-envconfig
+Name: deploynaut-environmentconfig
 After:
   - '#deploynaut'
 ---
 DNEnvironment:
   extensions:
-    - '\EnvironmentVariables\BackendAccess'
+    - 'EnvironmentConfig\EnvironmentExtension'
