--- a/_config/config.yml
+++ b/_config/config.yml
@@ -6,3 +6,9 @@ After:
 DNEnvironment:
   extensions:
     - 'EnvironmentConfig\EnvironmentExtension'
+DNRoot:
+  extensions:
+    - 'EnvironmentConfig\Dispatcher'
+  url_handlers:
+    'project/$Project/environment/$Environment/configuration': 'configuration'
+    'project/$Project/environment/$Environment/configuration_save': 'save'
