--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "devDependencies": {
+  "dependencies": {
     "babel": "5.8.23",
     "bootstrap-sass": "^3.3.5",
     "browserify": "^11.1.0",
     "font-awesome": "^4.3.0",
     "gulp": "^3.9.0",
     "gulp-sass": "2.0.4",
+    "gulp-uglify": "^1.4.1",
     "gulp-util": "^3.0.6",
     "node-sass": "^3.3.2",
     "reactify": "^1.1.1",
     "underscore": "^1.8.3",
+    "underscore.string": "^3.2.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
