Strip non-printables.

--- a/composer.json
+++ b/composer.json
@@ -5,5 +5,6 @@
     "require": {
         "silverstripe/deploynaut": "*"
     },
-    "license": "BSD-3-Clause"
+    "license": "BSD-3-Clause",
+    "minimum-stability": "dev"
 }
