Renamed the dispatcher to variable dispatcher

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -8,4 +8,4 @@ DNEnvironment:
     - 'EnvironmentConfig\EnvironmentExtension'
 Director:
   rules:
-    'naut/project/$Project/environment/$Environment/configuration': 'EnvironmentConfig\Dispatcher',
+    'naut/project/$Project/environment/$Environment/configuration': 'EnvironmentConfig\VariableDispatcher',
